multilanguage updates - now it seems to enough for now - addresses #2

--- a/adoration-application/modules/adoration-webapp/src/main/resources/i18n/messages_en.properties
+++ b/adoration-application/modules/adoration-webapp/src/main/resources/i18n/messages_en.properties
@@ -147,3 +147,7 @@ i18n.en.adoratorList.jsp.title=Perpetual Adoration - Vác - List of Adorators an
 i18n.en.adoratorList.jsp.selection=Select from the possibilities below...
 i18n.en.adoratorList.jsp.people=List of Adorators
 i18n.en.adoratorList.jsp.hours=List of Committed Hours
+
+i18n.en.e404.jsp.oops=Oops, a mistake has been made.
+i18n.en.e404.jsp.txt=We have received a request on the Perpetual Adoration website which unfortunately cannot be fulfilled. The site operators have received a reminder of this error and are working to ensure that this does not happen again. In the meantime, please be patient as it may take several days to correct the error.
+i18n.en.e404.jsp.menu=Please select an item from the menu above, or wait 10 seconds and the page will reload with the main Perpetual Adoration page.
