--- a/adoration-application/modules/adoration-webapp/src/main/resources/i18n/messages_hu.properties
+++ b/adoration-application/modules/adoration-webapp/src/main/resources/i18n/messages_hu.properties
@@ -147,3 +147,7 @@ i18n.hu.adoratorList.jsp.title=Örökimádás - Vác - Adorátorok és Órák li
 i18n.hu.adoratorList.jsp.selection=Válassz az alábbi lehetőségek közül...
 i18n.hu.adoratorList.jsp.people=Adorálók Listája
 i18n.hu.adoratorList.jsp.hours=Vállalt Órák Listája
+
+i18n.hu.e404.jsp.oops=Oppá, hiba történt.
+i18n.hu.e404.jsp.txt=Egy olyan kérés érkezett az Örökimádás weboldalára, amely sajnos nem teljesíthető. Az oldal üzemeltetői kaptak egy emlékeztetőt erről a hibáról, és már dolgoznak is azon, hogy ez máskor ne fordulhasson elő. Addig is türelmét kérjuk, mert a hiba kijavítása akár több napot is igénybe vehet.
+i18n.hu.e404.jsp.menu=A fenti menüsort használva folytassa a tevékenységét, vagy várjon 10 másodpercet, és az oldal újratöltődik az Örökimádás fő oldalával.
