--- a/adoration-application/modules/adoration-webapp/src/main/resources/i18n/web_en.properties
+++ b/adoration-application/modules/adoration-webapp/src/main/resources/i18n/web_en.properties
@@ -26,6 +26,7 @@ web.en.coverage.errorEmail=E-mail address is incorrect!
 web.en.coverage.errorPhone=Phone number is incorrect!
 web.en.coverage.errorMissedEmailOrPhone=Specifying the e-mail address or the phone number is mandatory!
 web.en.coverage.errorConsent=Without your data handling consent we cannot accept your registration request!
+web.en.coverage.js.time=Hour: 
 
 web.en.adorRegistration.Failed=Unsuccessful registration, please recheck the provided data and retry.
 web.en.messageToCoordinator.Failed=Message sending failed.
