--- a/adoration-application/modules/adoration-webapp/src/main/resources/i18n/web_hu.properties
+++ b/adoration-application/modules/adoration-webapp/src/main/resources/i18n/web_hu.properties
@@ -26,6 +26,7 @@ web.hu.coverage.errorEmail=A megadott e-mail cím nem helyes!
 web.hu.coverage.errorPhone=A megadott telefonszám nem helyes!
 web.hu.coverage.errorMissedEmailOrPhone=Telefonszám és e-mail cím közül legalább az egyik megadása kötelező!
 web.hu.coverage.errorConsent=Adatkezelési hozzájárulás nélkül a jelentkezést nem tudjuk elfogadni!
+web.hu.coverage.js.time=Időpont: 
 
 web.hu.adorRegistration.Failed=A regisztrálás sikertelen, kérjük ellenőrizze a megadott adatokat és próbálkozzon újra.
 web.hu.messageToCoordinator.Failed=Üzenetküldés sikertelen.
