--- a/adoration-application/modules/adoration-webapp/src/main/resources/i18n/messages_en.properties
+++ b/adoration-application/modules/adoration-webapp/src/main/resources/i18n/messages_en.properties
@@ -50,7 +50,7 @@ i18n.en.home.jsp.explanation.blue.frame.text=is used at hours when there are onl
 i18n.en.home.jsp.explanation.gray=Gray&nbsp;&nbsp;
 i18n.en.home.jsp.explanation.gray.text=backgrounded hours, when the Perpetual Adoration temporary ceased in the Chapel. Only online adoration is possible, therefore we suggest to use online adoration in case your selected hour falls to these hours.
 i18n.en.home.jsp.explanation.blue=Blue&nbsp;&nbsp;
-i18n.en.home.jsp.explanation.blue.text=backgrounded hours, when the Perpetual Adoration temporary ceased in the Chapel, but there is at least one registered Online adorator who does than adoration remotely.
+i18n.en.home.jsp.explanation.blue.text=backgrounded hours, when the Perpetual Adoration temporary ceased in the Chapel, but there is at least one registered Online adorator who does the adoration remotely.
 i18n.en.home.jsp.application.intro=Application is possible:
 i18n.en.home.jsp.application.method1=- via online registration on this page: <a href="/adoration/adorRegistration" target="_self">Application for Perpetual Adoration</a>.
 i18n.en.home.jsp.application.method2=- by filling an application form that can be found in the Chapel. After filling the form, please put it into the postbox of the Piarist monastery.
