add new bishop letter

--- a/adoration-application/modules/adoration-webapp/src/main/resources/i18n/messages_en.properties
+++ b/adoration-application/modules/adoration-webapp/src/main/resources/i18n/messages_en.properties
@@ -57,7 +57,8 @@ i18n.en.home.jsp.application.method2=- by filling an application form that can b
 i18n.en.home.jsp.application.method3=- by writing e-mail to this address: <a href="mailto:prhvac@gmail.com">prhvac@gmail.com</a>
 i18n.en.home.jsp.application.method4=- by calling the following phone number: <em>+36-70-375-4140</em>.
 i18n.en.home.jsp.documents.downloadable=Downloadable documents:
-i18n.en.home.jsp.documents.downloadable.mail=- <a href="/resources/img/BishopLetter-BeerM.pdf" target="new">Mail from bishop dr. Miklós Beer to the registrated adorators (in Hungarian)</a>
+i18n.en.home.jsp.documents.downloadable.mail2023=- <a href="/resources/img/10_2023_BishopLetter_2023.pdf" target="new">Mail from bishop Zsolt Marton to the registered adorators (in Hungarian)</a>
+i18n.en.home.jsp.documents.downloadable.mail=- <a href="/resources/img/BishopLetter-BeerM.pdf" target="new">Mail from ret. bishop dr. Miklós Beer to the registered adorators (in Hungarian)</a>
 i18n.en.home.jsp.documents.downloadable.rules=- <a href="/resources/img/AlapvetoSzabalyok.pdf" target="new">Rules to be followed by adorators in the Chapel (in Hungarian)</a>
 i18n.en.home.jsp.documents.downloadable.data=- <a href="/resources/img/AdatkezelesiSzabalyzat.pdf" target="new">Data Handling and Management Rules of the site (in Hungarian)</a>.
 
