--- a/adoration-application/modules/adoration-webapp/src/main/resources/i18n/messages_hu.properties
+++ b/adoration-application/modules/adoration-webapp/src/main/resources/i18n/messages_hu.properties
@@ -57,7 +57,8 @@ i18n.hu.home.jsp.application.method2=- A kápolnában elhelyezett jelentkezési 
 i18n.hu.home.jsp.application.method3=- E-mailben erre a címre írva: <a href="mailto:prhvac@gmail.com">prhvac@gmail.com</a>
 i18n.hu.home.jsp.application.method4=- A következő telefonszámok egyikén: <em>30-524-8291, 70-375-4140</em>.
 i18n.hu.home.jsp.documents.downloadable=Letölthető dokumentumok:
-i18n.hu.home.jsp.documents.downloadable.mail=- <a href="/resources/img/BishopLetter-BeerM.pdf" target="new">dr. Beer Miklós püspök atya levele a regisztrált szentségimádókhoz</a>
+i18n.hu.home.jsp.documents.downloadable.mail2023=- <a href="/resources/img/10_2023_BishopLetter_2023.pdf" target="new">Marton Zsolt püspök atya levele a regisztrált szentségimádókhoz</a>
+i18n.hu.home.jsp.documents.downloadable.mail=- <a href="/resources/img/BishopLetter-BeerM.pdf" target="new">dr. Beer Miklós nyugalmazott püspök atya levele a regisztrált szentségimádókhoz</a>
 i18n.hu.home.jsp.documents.downloadable.rules=- <a href="/resources/img/AlapvetoSzabalyok.pdf" target="new">Alapvető szabályok szentségimádók számára</a>
 i18n.hu.home.jsp.documents.downloadable.data=- <a href="/resources/img/AdatkezelesiSzabalyzat.pdf" target="new">Adatkezelési Szabályzat</a>.
 
