trasfer to final domain

--- a/adoration-application/modules/adoration-webapp/src/main/resources/i18n/messages_en.properties
+++ b/adoration-application/modules/adoration-webapp/src/main/resources/i18n/messages_en.properties
@@ -104,7 +104,7 @@ i18n.en.adorRegistration.jsp.registerYes=Register me, now
 i18n.en.registrationSuccess.jsp.title=Perpetual Adoration - Vác - Successful Registration
 i18n.en.registrationSuccess.jsp.success=Successful Registration
 i18n.en.registrationSuccess.jsp.successText1=Your registration will be processed soon, and by using your e-mail address or phone number, we will contact to you for data validation and for confirming your registration.
-i18n.en.registrationSuccess.jsp.successText2=In the meantime, please read the letter of bishop dr. Miklos Beer 
+i18n.en.registrationSuccess.jsp.successText2=In the meantime, please read the letter of bishop Zsolt Marton 
 i18n.en.registrationSuccess.jsp.successText3=from here (in Hungarian)
 i18n.en.registrationSuccess.jsp.successText4=,<br />the 
 i18n.en.registrationSuccess.jsp.successText5=information sheet that was created for the Registered Adorators,
