--- a/adoration-application/modules/adoration-webapp/src/main/resources/i18n/messages_hu.properties
+++ b/adoration-application/modules/adoration-webapp/src/main/resources/i18n/messages_hu.properties
@@ -104,7 +104,7 @@ i18n.hu.adorRegistration.jsp.registerYes=Jelentkezés elküldése
 i18n.hu.registrationSuccess.jsp.title=Örökimádás - Vác - Sikeres Regisztráció
 i18n.hu.registrationSuccess.jsp.success=Sikeres Regisztráció
 i18n.hu.registrationSuccess.jsp.successText1=Jelentkezését hamarosan feldolgozzuk, és a megadott telefonszámon, vagy e-mailen felkeressük Önt adategyeztetésre.
-i18n.hu.registrationSuccess.jsp.successText2=Addig is, kérjük olvassa el dr. Beer Miklós püspök atya levelét 
+i18n.hu.registrationSuccess.jsp.successText2=Addig is, kérjük olvassa el Marton Zsolt püspök atya levelét 
 i18n.hu.registrationSuccess.jsp.successText3=itt
 i18n.hu.registrationSuccess.jsp.successText4=, a szentségimádóknak szóló 
 i18n.hu.registrationSuccess.jsp.successText5=tájékoztatót,
