--- a/adoration-application/modules/adoration-webapp/src/main/resources/i18n/web_en.properties
+++ b/adoration-application/modules/adoration-webapp/src/main/resources/i18n/web_en.properties
@@ -18,10 +18,10 @@ web.en.common.errorData=Error in specified data!
 web.en.common.guest=Guest - 
 
 web.en.coverage.oneTime=One-time application, for this specific hour
-web.en.coverage.thisTime=Do you want to register for this specific occassion: 
+web.en.coverage.thisTime=Do you want to register for this specific occasion: 
 web.en.coverage.noTime=You have not been registered as adorator.
 web.en.coverage.errorName=Name is mandatory!
-web.en.coverage.errorNamePattern=Name contains unallowed charaters, please update!
+web.en.coverage.errorNamePattern=Name contains unallowed characters, please update!
 web.en.coverage.errorEmail=E-mail address is incorrect!
 web.en.coverage.errorPhone=Phone number is incorrect!
 web.en.coverage.errorMissedEmailOrPhone=Specifying the e-mail address or the phone number is mandatory!
