--- a/adoration-application/modules/adoration-webapp/src/main/resources/i18n/messages_hu.properties
+++ b/adoration-application/modules/adoration-webapp/src/main/resources/i18n/messages_hu.properties
@@ -121,6 +121,7 @@ i18n.hu.login.jsp.loginText2=Használhatja például a Google-t azonosításra:
 i18n.hu.login.jsp.loginText3=, (kattintson a Google logora!)
 i18n.hu.login.jsp.loginText4=de beléphet Facebook fiókjával is: 
 i18n.hu.login.jsp.loginText5= , (kattintson a Facebook logora!)
+i18n.hu.login.jsp.cookieWarning=<b>Figyelem!</b> A belépés során az azonosításkor az adott szolgáltató (Google vagy Facebook) un 'sütiket' (cookies) használ. Belépés esetén ezek használata elkerülhetetlen. Bővebb információ Google esetén <a target="blank" href="https://policies.google.com/technologies/cookies?hl=hu-HU">itt</a>, Facebook esetén <a target="blank" href="https://www.facebook.com/privacy/policies/cookies/">itt</a> található.
 
 i18n.hu.guestinfo.jsp.title=Örökimádás - Vác - Személyes Információk
 i18n.hu.guestinfo.jsp.infoTitle=Információk
