remove Facebook login possibilities

--- a/adoration-application/modules/adoration-webapp/src/main/resources/i18n/messages_hu.properties
+++ b/adoration-application/modules/adoration-webapp/src/main/resources/i18n/messages_hu.properties
@@ -116,12 +116,12 @@ i18n.hu.registrationSuccess.jsp.successText9=erre a linkre kattintva
 i18n.hu.login.jsp.title=Örökimádás - Vác - Belépés
 i18n.hu.login.jsp.notLoggedIn=Ön nincs bejelentkezve, kérjük lépjen be (vagy regisztráljon), hogy további oldalakhoz is hozzáférjen.
 i18n.hu.login.jsp.firstLoginCase=Kérjük vegye figyelembe, hogy a legelső bejelentkezés után még eltelhet pár nap mire a végleges azonosítás megtörténik, és további információkhoz is hozzáférhet.
-i18n.hu.login.jsp.loginText1=A belépés többféleképpen is történhet:
-i18n.hu.login.jsp.loginText2=Használhatja például a Google-t azonosításra: 
+i18n.hu.login.jsp.loginText1=A belépés jelenleg csak egyféleképpen történhet:
+i18n.hu.login.jsp.loginText2=A Google-t azonosításra: 
 i18n.hu.login.jsp.loginText3=, (kattintson a Google logora!)
 i18n.hu.login.jsp.loginText4=de beléphet Facebook fiókjával is: 
 i18n.hu.login.jsp.loginText5= , (kattintson a Facebook logora!)
-i18n.hu.login.jsp.cookieWarning=<b>Figyelem!</b> A belépés során az azonosításkor az adott szolgáltató (Google vagy Facebook) un 'sütiket' (cookies) használ. Belépés esetén ezek használata elkerülhetetlen. Bővebb információ Google esetén <a target="blank" href="https://policies.google.com/technologies/cookies?hl=hu-HU">itt</a>, Facebook esetén <a target="blank" href="https://www.facebook.com/privacy/policies/cookies/">itt</a> található.
+i18n.hu.login.jsp.cookieWarning=<b>Figyelem!</b> A belépés során az azonosításkor az adott szolgáltató (Google) un 'sütiket' (cookies) használ. Belépés esetén ezek használata elkerülhetetlen. Bővebb információ a Google cookie használatával kapcsolatban <a target="blank" href="https://policies.google.com/technologies/cookies?hl=hu-HU">itt</a> található.
 
 i18n.hu.guestinfo.jsp.title=Örökimádás - Vác - Személyes Információk
 i18n.hu.guestinfo.jsp.infoTitle=Információk
