--- a/adoration-application/modules/adoration-webapp/src/main/resources/i18n/messages_en.properties
+++ b/adoration-application/modules/adoration-webapp/src/main/resources/i18n/messages_en.properties
@@ -116,12 +116,12 @@ i18n.en.registrationSuccess.jsp.successText9=by clicking on this link
 i18n.en.login.jsp.title=Perpetual Adoration - Vác - Social Login
 i18n.en.login.jsp.notLoggedIn=You are not logged in. Please, if you can, login/register to Perpetual Adoration web site in order to get access to additional information.
 i18n.en.login.jsp.firstLoginCase=Please note that after the first login, it may take a few days for the final identification to take place and for you to have access to further information.
-i18n.en.login.jsp.loginText1=Login/site registration may happen by using various methods:
+i18n.en.login.jsp.loginText1=Login/site registration may happen by using you social account:
 i18n.en.login.jsp.loginText2=You may use your Google account: 
 i18n.en.login.jsp.loginText3=, (click on the Google logo!)
 i18n.en.login.jsp.loginText4=or you may use your Facebook account too: 
 i18n.en.login.jsp.loginText5= , (click on the Facebook logo!)
-i18n.en.login.jsp.cookieWarning=<b>Warning!</b> During and after the login process the specific service (Google or Facebook) will use cookies. Using cookies is unavoidable in case of login. Please read more about the used cookies <a target="blank" href="https://policies.google.com/technologies/cookies?hl=en-US">here</a> in case Google, and <a target="blank" href="https://www.facebook.com/privacy/policies/cookies/">here</a> in case Facebook is used for logging in.
+i18n.en.login.jsp.cookieWarning=<b>Warning!</b> During and after the login process the specific service (Google) will use cookies. Using cookies is unavoidable in case of login. Please read more about the used cookies <a target="blank" href="https://policies.google.com/technologies/cookies?hl=en-US">here</a>.
 
 i18n.en.guestinfo.jsp.title=Perpetual Adoration - Vác - Personal Information
 i18n.en.guestinfo.jsp.infoTitle=Information
