add html privacy policy

--- a/adoration-application/modules/adoration-webapp/src/main/resources/i18n/messages_hu.properties
+++ b/adoration-application/modules/adoration-webapp/src/main/resources/i18n/messages_hu.properties
@@ -61,6 +61,9 @@ i18n.hu.home.jsp.documents.downloadable.mail2023=- <a href="/resources/img/10_20
 i18n.hu.home.jsp.documents.downloadable.mail=- <a href="/resources/img/BishopLetter-BeerM.pdf" target="new">dr. Beer Miklós nyugalmazott püspök atya levele a regisztrált szentségimádókhoz</a>
 i18n.hu.home.jsp.documents.downloadable.rules=- <a href="/resources/img/AlapvetoSzabalyok.pdf" target="new">Alapvető szabályok szentségimádók számára</a>
 i18n.hu.home.jsp.documents.downloadable.data=- <a href="/resources/img/AdatkezelesiSzabalyzat.pdf" target="new">Adatkezelési Szabályzat</a>.
+i18n.hu.home.jsp.privacy=<a href="/pp">Adatkezelési irányelvek</a>
+
+i18n.hu.pp.jsp.title=Adatkezelési irányelvek
 
 i18n.hu.live.jsp.title=Örökimádás - Vác - Élő Közvetítés
 i18n.hu.live.jsp.login1=Ön nincs bejelentkezve, kérjük, amennyiben teheti, lépjen be 
