--- a/adoration-application/modules/adoration-webapp/src/main/resources/i18n/messages_en.properties
+++ b/adoration-application/modules/adoration-webapp/src/main/resources/i18n/messages_en.properties
@@ -61,6 +61,9 @@ i18n.en.home.jsp.documents.downloadable.mail2023=- <a href="/resources/img/10_20
 i18n.en.home.jsp.documents.downloadable.mail=- <a href="/resources/img/BishopLetter-BeerM.pdf" target="new">Mail from ret. bishop dr. Miklós Beer to the registered adorators (in Hungarian)</a>
 i18n.en.home.jsp.documents.downloadable.rules=- <a href="/resources/img/AlapvetoSzabalyok.pdf" target="new">Rules to be followed by adorators in the Chapel (in Hungarian)</a>
 i18n.en.home.jsp.documents.downloadable.data=- <a href="/resources/img/AdatkezelesiSzabalyzat.pdf" target="new">Data Handling and Management Rules of the site (in Hungarian)</a>.
+i18n.en.home.jsp.privacy=<a href="/pp">Privacy Policy & Data Handling Policy (Hungarian)</a>
+
+i18n.en.pp.jsp.title=Privacy Policy & Data Handling Policy (in Hungarian)
 
 i18n.en.live.jsp.title=Perpetual Adoration - Vác - Live broadcast
 i18n.en.live.jsp.login1=You are not logged in. Please, if you can, login with your 
